--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 # Make sure RUBY_VERSION matches the Ruby version in .ruby-version
 ARG RUBY_VERSION=3.2.2
 FROM ghcr.io/rails/devcontainer/images/ruby:$RUBY_VERSION
+ENV RAILS_MASTER_KEY=fake
