--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
   <% if ENV["DB_HOST"] %>
   host: <%= ENV["DB_HOST"] %>
   username: postgres
-  password: postgres
+  password: 
   <% end %>
 
 
@@ -85,6 +85,7 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: carriercontacts_production
-  username: carriercontacts
-  password: <%= ENV["CARRIERCONTACTS_DATABASE_PASSWORD"] %>
+  username: 
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
